// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesToolbar should render Toolbar, if category can be found 1`] = `
<Toolbar>
  <ToolbarItem
    href="https://cms.integreat-app.de/augsburg/de/wp-json/ig-mpdf/v1/pdf?url=/augsburg/de/willkommen"
    name="file-pdf-o"
    text="createPdf"
  />
  <CategoriesToolbar__FeedbackToolbarItem
    isPositiveRatingLink={true}
    location={
      Object {
        "pathname": "/augsburg/de/willkommen",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
  />
  <CategoriesToolbar__FeedbackToolbarItem
    isPositiveRatingLink={false}
    location={
      Object {
        "pathname": "/augsburg/de/willkommen",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
  />
  <FeedbackModal
    id={3649}
    isOpen={false}
    isPositiveRatingSelected={false}
    location={
      Object {
        "pathname": "/augsburg/de/willkommen",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    title="Willkommen"
  />
</Toolbar>
`;

exports[`CategoriesToolbar should render root-url for pdf endpoint 1`] = `
<Toolbar>
  <ToolbarItem
    href="https://cms.integreat-app.de/augsburg/de/wp-json/ig-mpdf/v1/pdf"
    name="file-pdf-o"
    text="createPdf"
  />
  <CategoriesToolbar__FeedbackToolbarItem
    isPositiveRatingLink={true}
    location={
      Object {
        "pathname": "/augsburg/de",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
  />
  <CategoriesToolbar__FeedbackToolbarItem
    isPositiveRatingLink={false}
    location={
      Object {
        "pathname": "/augsburg/de",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
  />
  <FeedbackModal
    id={0}
    isOpen={false}
    isPositiveRatingSelected={false}
    location={
      Object {
        "pathname": "/augsburg/de",
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    title="augsburg"
  />
</Toolbar>
`;
